
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static int _php_filter_validate_ipv4(char *str, size_t str_len, int *ip)
{
 const char *end = str + str_len;
 int num, m;
 int n = 0;

 while (str < end) {
  int leading_zero;
  if (*str < '0' || *str > '9') {
   return 0;
  }
  leading_zero = (*str == '0');
  m = 1;
  num = ((*(str++)) - '0');
  while (str < end && (*str >= '0' && *str <= '9')) {
   num = num * 10 + ((*(str++)) - '0');
   if (num > 255 || ++m > 3) {
    return 0;
   }
  }


  if (leading_zero && (num != 0 || m > 1))
   return 0;
  ip[n++] = num;
  if (n == 4) {
   return str == end;
  } else if (str >= end || *(str++) != '.') {
   return 0;
  }
 }
 return 0;
}
